Add os name