@@ -223,10 +223,11 @@
 
   <profiles>
     <profile>
-      <!-- testing-postgresql-server only supports x86-64 -->
-      <id>x86_64-tests</id>
+      <!-- testing-postgresql-server only supports x86-64 on linux environment -->
+      <id>linux-x86_64-tests</id>
       <activation>
         <os>
+          <name>linux</name>
           <arch>x86_64</arch>
         </os>
       </activation>
@@ -246,11 +247,36 @@
       </build>
     </profile>
     <profile>
-      <!-- testing-postgresql-server only supports amd64 -->
-      <id>amd64-tests</id>
+      <!-- testing-postgresql-server only supports amd64 on linux environment -->
+      <id>linux-amd64-tests</id>
       <activation>
         <os>
+          <name>linux</name>
           <arch>amd64</arch>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration combine.self="override">
+              <systemProperties>
+                <tajo.test>TRUE</tajo.test>
+              </systemProperties>
+              <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!-- testing-postgresql-server only supports x86-64 on mac os environment -->
+      <id>macos-x86_64-tests</id>
+      <activation>
+        <os>
+          <name>mac os x</name>
+          <arch>x86_64</arch>
         </os>
       </activation>
       <build>
